# cloak

./: .env.example  .gitignore  CLAUDE.md  GUIDE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.obsidian/: graph.json  workspace.json
cloak/: __init__.py  config.py  registry.py
cloak/cli/: main.py  setup.py  system_check.py
cloak/extraction/: math_ocr.py  ocr_tools.py  pdf_tools.py
cloak/ingestion/: context_manager.py  markdown_builder.py  model_router.py  parser_agent.py  pdf_classifier.py  pdf_extractor.py  pdf_tools.py  quality_judge.py  vision.py  vision_tools.py
cloak/orchestration/: context_manager.py  model_router.py  parser_agent.py
cloak/profiling/: doc_profiler.py  page_profiler.py
cloak/quality/: deep_review.py  postprocess.py  quality_judge.py
cloak/vision/: vision_tools.py
data/samples/: README.md
data/samples/medical_report/: NOTES.md
data/samples/mixed_pdf/: NOTES.md
data/samples/poster/: NOTES.md
data/samples/question_paper/: NOTES.md
data/samples/research_paper/: NOTES.md
data/samples/scanned_pdf/: NOTES.md
docs/: ARCHITECTURE.md  BENCHMARK.md  DECISIONS.md  GAPS.md  MODELS.md  MODULES.md  PROGRESS.md  cloak_agent_executable_prd.md  cloak_agentic_parser_master_design_document.md
scripts/: batch_test.ps1  benchmark.py  speed_test.py  test_vision_cold.py
tests/: test_pdf_tools.py  test_postprocess.py  test_quality_judge.py  test_vision_tools.py
