[project]
name = "cloak"
version = "0.1.0"
description = "Content-aware Local Ollama Agentic Knowledge Parser"
authors = [{name = "Prashanth", email = "prashanth@sims.healthcare"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "ollama>=0.3.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.10",
    "psutil>=5.9.0",
    "typer>=0.12.0",
    "docling>=2.0.0",
    "surya-ocr>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
cloak = "cloak.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloak"]

[tool.ruff]
line-length = 100
target-version = "py310"
